--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,26 @@
-h1{
-    color: red;
+*{
+    margin: 0;
+    padding: 0;
+}
+.goat-head{
+    background-image: url('../images/GOAT.jpg');
+    background-size: cover;
+    height: 100vh;
+    background-position: center;
+}
+
+.goat-head h1{
+    color: azure;
+    font-size: 100px;
+    text-align: center;
+    font-weight: 900;
+    padding-top: 60px;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    word-spacing: 10px;
+    letter-spacing: 20px;
+}
+
+.h1-the{
+    color: blueviolet;
+    letter-spacing: normal;
 }
